# ordia-package

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: docs_inventory.yaml
docs/ordia/: CODEX_ENFORCEMENT_SPIKE.md  DAILY_USAGE.md  IMPROVEMENT_PLAN_v0.6.md  PUBLISH_CHECKLIST.md  PYPI_SETUP.md  README.md  SPEC_v0.2.md  SPEC_v0.6.md  SPEC_v0.7.md  SPEC_v0.8.md  TASK_WALKTHROUGH.md  WORKFLOW_INTENTS_SPIKE.md
examples/brownfield-adoption/: README.md
examples/consumer-github-action/: ordia-consumer.yml
examples/greenfield/: README.md
examples/plugin-validator/: README.md  pyproject.toml
examples/plugin-validator/myapp_ordia/: validators.py
examples/project-commands/: README.md  package.json
examples/reference-monorepo/: AGENTS.md  README.md  ordia.yaml  package.json
scripts/: _ordia_bootstrap.py  audit_command_catalog_coverage.py  audit_docs_inventory.py  ordia_cli.py  run_ordia_tests.py  sync_ordia_cursor_bundle.py  test_ordia_bundle_drift.py  test_ordia_cli.py  test_ordia_command_coverage.py  test_ordia_commands.py  test_ordia_config.py  test_ordia_doc_links.py  test_ordia_docs_inventory.py  test_ordia_docs_slice8.py  test_ordia_greenfield.py  test_ordia_manifest.py  test_ordia_model_routing.py  test_ordia_package_boundary.py  test_ordia_slice4_coverage.py  test_ordia_validator.py  test_ordia_wheel.py  test_ordia_workflows.py
tools/: ordia_dev_cli.py  scaffold_greenfield_snapshot.py  sync_cursor_bundle.py  verify_release_tag.py  verify_version_parity.py
(+42 files in other folders)
